# artemis2-simulation

./: .gitignore  CMakeLists.txt  README.md  artemis2.vcxproj  artemis2.vcxproj.filters  run.py  start.bat
.github/workflows/: cmake.yml
data/: moon.txt  orion.txt
include/: math_types.h  physics.h
scripts/: plot_orbit.py  tempCodeRunnerFile.py
src/: main.cpp  physics.cpp
